--- a/src/components/home.css
+++ b/src/components/home.css
@@ -1,12 +1,5 @@
-@font-face {
-  font-family: "Ravio Regular";
-  src: local("Ravio Regular"),
-    url("../fonts/Ravio-Regular.ttf") format("truetype");
-  font-weight: 400;
-}
-
 body {
-  font-family: "Ravio Regular";
+  font-family: "Poppins";
   background-color: #f4f4f9;
 }
 
@@ -40,13 +33,19 @@ body {
   width: 100px;
 }
 
+.leader-img img {
+  border-radius: 50%;
+  width: 80px;
+  height: 80px;
+}
+
 .leader-img {
   width: 80px;
   height: 80px;
   border-radius: 50%;
   background-color: #ccc;
   margin-bottom: 10px;
-  border: 5px solid #333;
+  border: 2px solid #333;
 }
 
 .leader-name {
@@ -95,29 +94,54 @@ body {
 }
 
 .points-balance {
-  text-align: center;
+  text-align: left;
 }
 
 .balance-details {
-  background-color: #f0f0f0;
-  padding: 20px;
+  display: grid;
+  grid-template-columns: auto auto;
+  background-color: #e4e4e441;
+  border: 1px solid #888;
+  padding: 10px 20px;
   border-radius: 10px;
 }
 
-.total-points {
+.grid-section-2 {
+  padding: 16px 0;
+}
+
+.total-points-num {
   font-size: 1.5rem;
-  color: #333;
-  margin-bottom: 10px;
+  font-weight: 500;
+  text-align: left;
+  margin-bottom: 0;
+  padding-bottom: 0;
+}
+
+.total-points {
+  margin-top: 0;
+  font-size: 1rem;
+  color: #888;
 }
 
 .points-changed {
-  font-size: 1.2rem;
+  text-align: right;
+  font-size: 1.5rem;
   color: #4caf50;
   font-weight: bold;
-  margin-bottom: 5px;
+  margin-bottom: 0;
 }
 
 .date {
+  margin-top: 0;
+  text-align: right;
   font-size: 1rem;
   color: #888;
+}
+
+.logo {
+  width: 100px;
+  position: absolute;
+  right: 20px;
+  top: 55px;
 }
