--- a/src/components/leaderboard.css
+++ b/src/components/leaderboard.css
@@ -1,12 +1,6 @@
-@font-face {
-  font-family: "Ravio Regular";
-  src: local("Ravio Regular"),
-    url("../fonts/Ravio-Regular.ttf") format("truetype");
-  font-weight: 400;
-}
 
 body {
-  font-family: "Ravio Regular", sans-serif;
+  font-family: "Poppins", sans-serif;
   background-color: #f4f4f9;
   margin: 0;
   padding: 0;
