--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -1,12 +1,6 @@
-@font-face {
-  font-family: "Ravio Regular";
-  src: local("Ravio Regular"),
-    url("../fonts/Ravio-Regular.ttf") format("truetype");
-  font-weight: 400;
-}
 
 body {
-  font-family: "Ravio Regular";
+  font-family: "Poppins";
 }
 
 .navbar {
